# Herring-Samples

./: README.md
Collectives_Instrumenation/: README  print_stats.py
DeBERTa-HuggingFace-SM/: DeBERTa-HuggingFace-SM-pretraining.ipynb
DeBERTa-HuggingFace-SM-FSx/: train_huggingface_deberta.ipynb
DeBERTa-HuggingFace-SM-FSx/deberta_script/: qa_deberta_huggingface_trainer.py
DeBERTa-xxlarge-SM-HuggingFace/: DeBERTa-HuggingFace-SM-pretraining.ipynb
DeBERTa-xxlarge-SM-HuggingFace/.ipynb_checkpoints/: DeBERTa-HuggingFace-SM-pretraining-checkpoint.ipynb
DeBERTa-xxlarge-SM-HuggingFace/deberta_script/: qa_deberta_huggingface_trainer.py
Problem-1/: CMakeLists.txt  Problem.md
Problem-2/: CMakeLists.txt  mpi-hello-world.c  problem.md
Problem-3/: CMakeLists.txt  cuda-copy.cu
Problem-4/: CMakeLists.txt  mpi-gpu-allreduce.cu
Problem-4-tensors/: CMakeLists.txt  mpi-gpu-allreduce.cu
Problem-5/: CMakeLists.txt.backup  a.out  build.md  mpi-gpu-allreduce.cu
Problem-5/cmake/modules/: FindNCCL.cmake
Problem-6/: CMakeLists.txt  concurrency-sample.c
Problem-7/: CMakeLists.txt  avx-loop-sum.cpp  avx-sum.cpp
Problem-8/Custom_DDP/: distributed.py  example.py  launch.md
Problem-8/DDP_Example/: example.py
